<resources>
    <string name="app_name"> </string>
    <string name="home">Home</string>
    <string name="nearby">Nearby</string>
    <string name="profile">Profile</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="homefragment">Home Fragment</string>
    <string name="nearbyfragment">Nearby Fragment</string>
    <string name="profilefragment">Profile Fragment</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="changelang">Change Language</string>
    <string name="nightmode">Night Mode</string>
</resources>