<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_nearby"
        android:icon="@drawable/ic_baseline_my_location_24"
        android:title="@string/nearby" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_baseline_supervised_user_circle_24"
        android:title="@string/profile" />

    <item android:title="Others">
        <menu>
            <item android:title="@string/changelang"
                android:icon="@drawable/ic_baseline_settings_24"/>
            <item android:title="@string/logout"
                android:icon="@drawable/ic_baseline_power_settings_new_24"/>
        </menu>
    </item>
    <item xmlns:app="http://schemas.android.com/apk/res-auto"
        app:actionLayout="@layout/night_mode_layout"
        android:icon="@drawable/ic_baseline_brightness_4_24"
        android:title="Night Mode"
        />
</menu>